--- a/assets/css/profil.css
+++ b/assets/css/profil.css
@@ -184,6 +184,22 @@ h2, p {
     background-color: #218838;
 }
 
+.back-button {
+    background-color: #ffa500;
+    color: #ffffff;
+    border: none;
+    padding: 10px;
+    font-size: 1em;
+    border-radius: 4px;
+    cursor: pointer;
+    text-transform: uppercase;
+    font-weight: bold;
+}
+
+.back-button:hover {
+    background-color: #dd930a;
+}
+
 /* Modal Styles */
 .modal {
     display: none;
