--- a/assets/css/profil.css
+++ b/assets/css/profil.css
@@ -2,7 +2,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f4a261;
+    background-color: #ffa500;
 }
 
 .profile-container {
@@ -28,7 +28,7 @@ body {
 
 .header .back-button {
     text-decoration: none;
-    color: #f4a261;
+    color: #ffa500;
     font-weight: bold;
 }
 
@@ -99,7 +99,7 @@ body {
 }
 
 .submit-button {
-    background-color: #f4a261;
+    background-color: #ffa500;
     color: white;
     padding: 10px 15px;
     border: none;
@@ -109,5 +109,5 @@ body {
 }
 
 .submit-button:hover {
-    background-color: #e76f51;
+    background-color: #ffa500;
 }
