--- a/assets/css/dashboard.css
+++ b/assets/css/dashboard.css
@@ -1,16 +1,16 @@
 /* =========== Google Fonts ============ */
-@import url("https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 /* =============== Globals ============== */
 * {
-  font-family: "Ubuntu", sans-serif;
+  font-family: "Poppins", sans-serif;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
 :root {
-  --blue: #2a2185;
+  --blue: #021C3C;
   --yellow: #ffa500;
   --white: #fff;
   --gray: #f5f5f5;
@@ -241,7 +241,7 @@ form label {
 }
 
 .welcome-section .highlight {
-  color: #2b3e91;
+  color: var(--yellow);
   font-weight: bold;
 }
 
@@ -264,7 +264,7 @@ form label {
 }
 
 .feature-box h2 {
-  color: #2b3e91;
+  color: var(--blue);
   margin-bottom: 10px;
 }
 
@@ -277,7 +277,7 @@ form label {
 .feature-link {
   display: inline-block;
   padding: 10px 20px;
-  background-color: #2b3e91;
+  background-color: var(--blue);
   color: #fff;
   text-decoration: none;
   border-radius: 5px;
@@ -285,7 +285,7 @@ form label {
 }
 
 .feature-link:hover {
-  background-color: #1a2768;
+  background-color: var(--yellow);
 }
 
 form input[type="file"] {
