--- a/admin/assets/css/DashboardAdmin.css
+++ b/admin/assets/css/DashboardAdmin.css
@@ -194,7 +194,7 @@ body {
 .containerTable {
   margin: 20px auto;
   padding: 20px;
-  max-width: 1250px; /* Batas lebar */
+  max-width: 1800px; /* Batas lebar */
   background-color: #f8f9fa;
   border-radius: 8px;
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
@@ -220,6 +220,23 @@ body {
   border: 1px solid #ccc;
   border-radius: 5px;
   box-sizing: border-box;
+}
+
+/* Styling untuk tombol Cari */
+button[type="submit"] {
+  padding: 8px 16px;
+  background-color: #4CAF50;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 16px;
+  transition: background-color 0.3s;
+}
+
+/* Efek hover untuk tombol Cari */
+button[type="submit"]:hover {
+  background-color: #45a049;
 }
 
 /* Tabel data wisuda */
